# server/openapi.yaml
@@ -3,6 +3,19 @@ info:
     version: '1.0.0'
     title: BOON API
 paths:
+    /auth/whoami:
+        get:
+            responses:
+                '200':
+                    content:
+                        application/json:
+                            schema:
+                                type:
+                                    - 'null'
+                                    - object
+                                properties:
+                                    user:
+                                        $ref: '#/components/schemas/User'
     /posts:
         get:
             responses:
