# server/src/app.ts
@@ -4,6 +4,7 @@ import { type Context } from 'hono';
 import { swaggerUI } from '@hono/swagger-ui';
 import { logger } from 'hono/logger';
 import * as db from './db.ts';
+import { User } from './schema.ts';
 
 export function buildApp(database: db.Database): Hono {
     const app = new Hono();
@@ -12,6 +13,15 @@ export function buildApp(database: db.Database): Hono {
     app.use('*', logger());
 
     // Routers.
+    const authApp = new Hono();
+    authApp.get('/whoami', (c: Context) => {
+        // TODO: actually look up the user and implement remaining auth routes.
+        const fakeUser: User = { name: 'Mr fake user' };
+        // FIXME: wrapper in a `{ user }` object for compatibility with the old API.
+        // Seems redundant, so let's remove it when we're done migrating.
+        return c.json({ user: fakeUser });
+    });
+
     const usersApp = new Hono();
     usersApp.get('/', async (c: Context) => c.json(await db.listUsers(database)));
     usersApp.get('/:id', async (c: Context) => c.json(await db.getUser(database, c.req.param('id'))));
@@ -41,6 +51,7 @@ export function buildApp(database: db.Database): Hono {
     });
 
     // Main router.
+    app.route('/auth', authApp);
     app.route('/users', usersApp);
     app.route('/posts', postsApp);
 
